# demo-kit

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: audit-guard.yml  ci.yml
src/demokit/: __init__.py  gpu.py  serve.py  transport.py
templates/: run-demo.sh
tests/: test_agnostic.py  test_gpu.py  test_jsonsafe.py  test_transport.py
web/src/: bitgrid.ts  canvas.ts  chart.ts  dom.ts  index.ts  net.ts  styles.css  types.ts
