[project]
name = "demo-kit"
version = "0.1.1"
description = "Live-demo kit: the substrate-agnostic transport + web scaffolding for interactive research demos — a Python FastAPI/WebSocket server streaming state snapshots of a real training/dynamics loop to a thin canvas client."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gabriel Béna", email = "gabriel.bena1@gmail.com" }]
requires-python = ">=3.12"
# Hard deps, deliberately: the kit exists only to serve demos — an extra would be ceremony.
# The heavy science deps (jax & friends) belong to the CONSUMER; the kit never imports them.
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "wsproto>=1.2",
]

[project.urls]
Homepage = "https://github.com/GabrielBena/demo-kit"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6", "pyright>=1.1.400"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demokit"]

# Style SSOT — editor-on-save, CI, and any pytest lint gate all read this.
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "I", "N", "C4", "SIM", "RUF"]
ignore = [
    "E501", # line too long (handled by the formatter)
    "B008", # function calls in argument defaults
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["demokit"]
